--- a/PostHubClient/src/app/edit-post/edit-post.component.html
+++ b/PostHubClient/src/app/edit-post/edit-post.component.html
@@ -19,6 +19,7 @@
         
         <div class="postFooter">
             <!-- Ajouter un input de type file ici ne serait pas bête du tout -->
+             <input #myPictureViewChild type="file" name="image" accept="images/*" >
             <button (click)="createPost()">Envoyer</button>
         </div>
         
