--- a/PostHubClient/src/app/comment/comment.component.html
+++ b/PostHubClient/src/app/comment/comment.component.html
@@ -17,8 +17,9 @@
         <textarea *ngIf="editToggle" id="commentTextEdit" name="commentTextEdit" rows="3"
           [(ngModel)]="editedText">{{comment.text}}</textarea>
       </div>
-      <div class="commentPictures">
+      <div *ngFor="let i of pictureIds" class="commentPictures">
         <!-- Des images pourraient être affichées ici... -->
+        <img [src]="'https://localhost:7216/api/Comments/GetCommentPicture/' + i" alt="Picture">
       </div>
     </div>
   
@@ -48,7 +49,7 @@
       </div>
       <div>
         <!-- Il faudra modifier cet input -->
-        <input *ngIf="editToggle" type="file" accept="images/*" name="editedCommentPictures">
+        <input *ngIf="editToggle" type="file" accept="images/*" name="editedCommentPictures" #photo multiple>
       </div>
       <div>
         <button *ngIf="editToggle" (click)="editToggle = false">Annuler</button>
@@ -65,7 +66,7 @@
     <input type="text" name="newComment" id="newComment" placeholder="Ajouter un commentaire" [(ngModel)]="newComment">
     <div *ngIf="displayInputFile" class="commentPictureAdd">
       <!-- Il faudra modifier cet input -->
-      <input type="file" accept="images/*" name="commentPictures">
+      <input type="file" accept="images/*" name="commentPictures" #photo multiple>
     </div>
     <button (click)="displayInputFile = !displayInputFile"><fa-icon [icon]="faImage"></fa-icon></button>
     <button (click)="createComment()">Ajouter</button>
