--- a/PostHubClient/src/app/edit-post/edit-post.component.html
+++ b/PostHubClient/src/app/edit-post/edit-post.component.html
@@ -4,24 +4,28 @@
     <div class="category">Post dans <span class="orange">✦ {{hub.name}}</span></div>
 
     <div class="post">
-    
+
         <div id="postTitleBox">
             <div>Titre</div>
-            <input type="text" id="postTitle" name="postTitle" placeholder="Choisissez un titre éloquent" [(ngModel)]="postTitle">
+            <input type="text" id="postTitle" name="postTitle" placeholder="Choisissez un titre éloquent"
+                [(ngModel)]="postTitle">
         </div>
-    
+
         <div id="postContentBox">
             <div>
                 Texte
             </div>
-            <textarea rows="6" id="postContent" name="postContent" placeholder="Texte du post ..." [(ngModel)]="postText"></textarea>
+            <textarea rows="6" id="postContent" name="postContent" placeholder="Texte du post ..."
+                [(ngModel)]="postText"></textarea>
         </div>
-        
+
+
         <div class="postFooter">
             <!-- Ajouter un input de type file ici ne serait pas bête du tout -->
+            <input #myPictureViewChild type="file" name="image" accept="images/*" multiple>
             <button (click)="createPost()">Envoyer</button>
         </div>
-        
-      </div>
-    
+
+    </div>
+
 </div>
