--- a/PostHubClient/src/app/profile/profile.component.html
+++ b/PostHubClient/src/app/profile/profile.component.html
@@ -11,6 +11,10 @@
       <input type="password" name="oldPassword" id="oldPassword" placeholder="Mot de passe actuel" [(ngModel)]="oldPassword">
       <input type="password" name="newPassword" id="newPassword" placeholder="Nouveau mot de passe" [(ngModel)]="newPassword">
       <input type="password" name="newPasswordConfirm" id="newPasswordConfirm" placeholder="Confirmer le nouveau mot de passe" [(ngModel)]="newPasswordConfirm">
+      <br>
+      <div>Modifier votre avatar</div>
+      <img [src]="imageUrl" alt="Picture" id="imagePreview">
+      <input type="file" accept="image/*" name="profilePictures" #photo (change)="onFileSelected($event)">      
       <button>Modifier</button>
     </div>
   </div>
