--- a/PostHubClient/src/app/post/post.component.html
+++ b/PostHubClient/src/app/post/post.component.html
@@ -82,7 +82,8 @@
       <button><fa-icon [icon]="faMessage"></fa-icon> {{post.mainComment!.subCommentTotal}}</button>
     </div>
     <div>
-      <input *ngIf="toggleMainCommentEdit" type="file" accept="images/*" name="mainCommentPictures">
+      <input #myPictureViewChildPost *ngIf="toggleMainCommentEdit" type="file" accept="images/*"
+        name="mainCommentPictures" multiple>
     </div>
     <div>
       <button *ngIf="toggleMainCommentEdit" (click)="toggleMainCommentEdit = false">Annuler</button>
