--- a/PostHubClient/src/app/comment/comment.component.html
+++ b/PostHubClient/src/app/comment/comment.component.html
@@ -18,8 +18,9 @@
       </div>
       <div *ngFor="let i of pictureIds" class="commentPictures">
         <!-- Des images pourraient être affichées ici... -->
-        <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + i" alt="Picture">
-      </div>
+        <a [href]="'https://localhost:7216/api/Comments/GetPicture/full/' + i" target="_blank">
+          <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + i" alt="Picture">
+      </a>
     </div>
   
     <!-- Nombreux boutons pour modifier le commentaire (votes, signalement, modification, etc.) -->
