--- a/PostHubClient/src/app/profile/profile.component.html
+++ b/PostHubClient/src/app/profile/profile.component.html
@@ -13,7 +13,7 @@
       <input type="password" name="newPasswordConfirm" id="newPasswordConfirm" placeholder="Confirmer le nouveau mot de passe" [(ngModel)]="newPasswordConfirm">
       <br>
       <div>Modifier votre avatar</div>
-      <img [src]="'https://localhost:7216/api/Users/GetUserPicture/' + username" alt="Picture" id="imagePreview">
+      <img [src]="'https://localhost:7216/api/Users/GetUserPicture/' + username" alt="Picture" id="imagePreview" style="height: 200px;">
       <input type="file" accept="image/*" name="profilePictures" #photo>      
       <button (click)="updateUser()">Modifier</button>
     </div>
