--- a/PostHubClient/src/app/profile/profile.component.html
+++ b/PostHubClient/src/app/profile/profile.component.html
@@ -1,22 +1,32 @@
 <div *ngIf="!userIsConnected">
-    Connectez-vous pour accéder à votre profil.
-  </div>
-  
-  <div *ngIf="userIsConnected">
-    <div id="profileTitle">Votre profil</div>
-  
-    <!-- Le formulaire pour changer le mot de passe vous est déjà fourni -->
-    <div class="profile">
-      <div>Modifier le mot de passe</div>
-      <input type="password" name="oldPassword" id="oldPassword" placeholder="Mot de passe actuel" [(ngModel)]="oldPassword">
-      <input type="password" name="newPassword" id="newPassword" placeholder="Nouveau mot de passe" [(ngModel)]="newPassword">
-      <input type="password" name="newPasswordConfirm" id="newPasswordConfirm" placeholder="Confirmer le nouveau mot de passe" [(ngModel)]="newPasswordConfirm">
-      <button (click)="changePassword()">Changer le mot de passe</button>
-      <br>
-      <div>Modifier votre avatar</div>
-      <img [src]="'https://localhost:7216/api/Users/GetUserPicture/' + username" alt="Picture" id="imagePreview" style="height: 200px;">
-      <input type="file" accept="image/*" name="profilePictures" #photo>      
-      <button (click)="updateUser()">Modifier</button>
+  Connectez-vous pour accéder à votre profil.
+</div>
+
+<div *ngIf="userIsConnected">
+  <div id="profileTitle">Votre profil</div>
+
+  <!-- Le formulaire pour changer le mot de passe vous est déjà fourni -->
+  <div class="profile">
+    <div>Modifier le mot de passe</div>
+    <input type="password" name="oldPassword" id="oldPassword" placeholder="Mot de passe actuel"
+      [(ngModel)]="oldPassword">
+    <input type="password" name="newPassword" id="newPassword" placeholder="Nouveau mot de passe"
+      [(ngModel)]="newPassword">
+    <input type="password" name="newPasswordConfirm" id="newPasswordConfirm"
+      placeholder="Confirmer le nouveau mot de passe" [(ngModel)]="newPasswordConfirm">
+    <button (click)="changePassword()">Changer le mot de passe</button>
+    <br>
+    <div>Modifier votre avatar</div>
+    <img [src]="'https://localhost:7216/api/Users/GetUserPicture/' + username" alt="Picture" id="imagePreview"
+      style="height: 200px;">
+    <input type="file" accept="image/*" name="profilePictures" #photo>
+    <button (click)="updateUser()">Modifier</button>
+
+
+    <div *ngIf="userRole === 'admin'">
+      <h3>Ajouter un modérateur</h3>
+      <input type="text" placeholder="Nom d'utilisateur" #moderatorUsername>
+      <button (click)="addModerator(moderatorUsername.value)">Ajouter</button>
     </div>
   </div>
-  
+</div>
