--- a/PostHubClient/src/app/post/post.component.html
+++ b/PostHubClient/src/app/post/post.component.html
@@ -33,13 +33,13 @@
     <div class="glide">
       <div class="glide__track" data-glide-el="track">
         <ul class="glide__slides">
-          <li class="glide__slide" style="height: 400px;" *ngFor="let p of post.mainComment?.picturesIds" #glideitems>
+          <li class="glide__slide" style="width: 200px;" *ngFor="let p of post.mainComment?.picturesIds" #glideitems>
             <div style="position: relative; height: 100%;">
               <a [href]="'https://localhost:7216/api/Comments/GetPicture/full/' + p" target="_blank">
                 <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + p"
-                style="object-fit: cover;width: 100%;height: 100%;" />
+                  style="object-fit: cover;width: 100%;height: 100%;" />
               </a>
-              <button *ngIf="isAuthor" (click)="deletePicture(p)" 
+              <button *ngIf="isAuthor" (click)="deletePicture(p)"
                 style="position: absolute; top: 5px; right: 5px; background: black; color: white; border: none; border-radius: 50%; cursor: pointer;">
                 x
               </button>
@@ -76,7 +76,8 @@
         <a [href]="'https://localhost:7216/api/Comments/GetPicture/full/' + p" target="_blank">
           <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + p" />
         </a>
-        <button *ngIf="isAuthor" (click)="deletePicture(p)" style="position: absolute; top: 5px; right: 5px; background: black; color: white; border: none; border-radius: 50%; cursor: pointer;">
+        <button *ngIf="isAuthor" (click)="deletePicture(p)"
+          style="position: absolute; top: 5px; right: 5px; background: black; color: white; border: none; border-radius: 50%; cursor: pointer;">
           x</button>
       </div>
     </div>
