--- a/PostHubClient/src/app/post/post.component.html
+++ b/PostHubClient/src/app/post/post.component.html
@@ -74,7 +74,7 @@
     <div class="grid" #masongrid>
       <div #masongriditems class="grid-item" *ngFor="let p of post.mainComment?.picturesIds">
         <a [href]="'https://localhost:7216/api/Comments/GetPicture/full/' + p" target="_blank">
-          <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + p" />
+          <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + p" style="width: 200px;" />
         </a>
         <button *ngIf="isAuthor" (click)="deletePicture(p)"
           style="position: absolute; top: 5px; right: 5px; background: black; color: white; border: none; border-radius: 50%; cursor: pointer;">
