--- a/PostHubClient/src/app/app.component.html
+++ b/PostHubClient/src/app/app.component.html
@@ -34,6 +34,8 @@
 
       <div class="spacer"></div>
 
+      <div *ngIf="isModo" class="rightOption" [routerLink]="['/reports']">Rapports</div>
+
       <div class="rightOption" [routerLink]="['/profile']">Profil</div>
 
     </nav>
